@@ -1,6 +1,7 @@
 package io.onedev.server.web.resourcebundle;
 
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -173,8 +174,9 @@ public class ResourceBundleReferences {
 			if (hasDefaultCtor) {
 				ResourceReference resource;
 				try {
-					resource = resourceClass.newInstance();
-				} catch (InstantiationException | IllegalAccessException e) {
+					resource = resourceClass.getDeclaredConstructor().newInstance();
+				} catch (InstantiationException | IllegalAccessException | IllegalArgumentException 
+						| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 					throw new RuntimeException(e);
 				}
 				dependencyMap.put(resource, getDependencyAware(resource));
